--- a/songbird/src/scss/top-panel.scss
+++ b/songbird/src/scss/top-panel.scss
@@ -6,15 +6,11 @@
   grid-column-end: 3;
   width: 100%;
   margin-top: 20px;
-}
 
-@media(max-width: 600px) {
-
-  .top-panel {
+  @media(max-width: 600px) {
     grid-column-start: 1;
     grid-column-end: 2;
   }
-
 }
 
 .questions-list {
@@ -22,27 +18,20 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   padding: 0;
   border-radius: 10px;
-}
 
-@media(max-width: 900px) {
-
-  .questions-list {
+  @media(max-width: 900px) {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding: 0;
     border-radius: 10px;
   }
 
-}
-@media(max-width: 500px) {
-
-  .questions-list {
+  @media(max-width: 500px) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0;
     border-radius: 10px;
   }
-
 }
 
 .question-item {
@@ -56,18 +45,16 @@
   letter-spacing: 5px;
   font-size: 12px;
   background-color: rgb(49, 49, 49);
-}
 
+  &:first-child {
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+  }
 
-
-.question-item:first-child {
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
-}
-
-.question-item:last-child {
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
+  &:last-child {
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+  }
 }
 
 .question-item_active {
@@ -133,21 +120,14 @@
   text-transform: uppercase;
   letter-spacing: 5px;
   font-size: 20px;
-}
 
-@media(max-width: 600px) {
-
-  .score {
+  @media(max-width: 600px) {
     font-size: 14px;
   }
 
-}
-@media(max-width: 400px) {
-
-  .score {
+  @media(max-width: 400px) {
     font-size: 12px;
   }
-  
 }
 
 .top-panel__row {
@@ -160,21 +140,14 @@
   font-size: 24px;
   font-weight: 500;
   letter-spacing: 10px;
-}
 
-@media(max-width: 600px) {
-
-  .logo {
+  @media(max-width: 600px) {
     font-size: 18px;
   }
-  
-}
-@media(max-width: 400px) {
 
-  .logo {
+  @media(max-width: 400px) {
     font-size: 14px;
   }
-  
 }
 
 .logo a {
