--- a/songbird/src/scss/main.scss
+++ b/songbird/src/scss/main.scss
@@ -59,15 +59,12 @@
 }
 
 .nav {
-  width: 25%;
+  width: 500px;
 
-  @media(max-width: 1400px) {
-    width: 35%;
-  }
 
-  @media(max-width: 1000px) {
-    width: 50%;
-  }
+  // @media(max-width: 950px) {
+  //   width: 60%;
+  // }
 }
 
 .nav__list {
