--- a/songbird/src/scss/player.scss
+++ b/songbird/src/scss/player.scss
@@ -74,6 +74,14 @@
     margin-top: 15px;
   }
 
+  @media(max-width: 900px) {
+    width: 250px;
+  }
+
+  @media(max-width: 830px) {
+    width: 220px;
+  }
+
   @media(max-width: 800px) {
     width: 200px;
   }
