--- a/songbird/src/style.scss
+++ b/songbird/src/style.scss
@@ -4,6 +4,7 @@
 @import './scss/answer-options.scss';
 @import './scss/bird-description.scss';
 @import './scss/end-message.scss';
+@import './scss/gallery.scss';
 
 @import './scss/main.scss';
 @import './scss/quiz.scss'
