--- a/songbird/src/scss/main.scss
+++ b/songbird/src/scss/main.scss
@@ -33,7 +33,8 @@
   justify-content: space-between;
   position: absolute;
   top: 0;
-  width: 100vw;
+  left: 0;
+  width: 100%;
   padding: 50px 70px;
   box-sizing: border-box;
   z-index: 10;
