--- a/songbird/src/scss/answer-options.scss
+++ b/songbird/src/scss/answer-options.scss
@@ -32,6 +32,7 @@
   background-color: rgb(70, 70, 70);
   border-radius: 50%;
   margin-right: 10px;
+  pointer-events: none;
 }
 
 .answer-options__btn_false {
